--- a/src/app/user/user-dashboard.component.html
+++ b/src/app/user/user-dashboard.component.html
@@ -257,39 +257,13 @@
         dateFormat="M yy"
         [showIcon]="true"
         [showOnFocus]="false"
+        [maxDate]="maxSelectableDate"
         [showButtonBar]="true"
         [yearNavigator]="true"
         [yearRange]="'2020:2040'"
       >
       </p-calendar>
     </div>
-
-    <div class="form-group">
-      <label for="reportFormat">File Format</label>
-      <p-dropdown
-        id="reportFormat"
-        [(ngModel)]="selectedFormat"
-        [options]="reportFormats"
-        optionLabel="name"
-        placeholder="Select format"
-        [showClear]="true"
-      >
-      </p-dropdown>
-    </div>
-
-    <!-- Optional - Report Type Selection -->
-    <!-- <div class="form-group">
-      <label for="reportType">Report Type</label>
-      <p-dropdown
-        id="reportType"
-        [(ngModel)]="selectedReportType"
-        [options]="reportTypes"
-        optionLabel="name"
-        placeholder="Select report type"
-        [showClear]="true"
-      >
-      </p-dropdown>
-    </div> -->
   </div>
 
   <ng-template pTemplate="footer">
