--- a/src/app/shared/distribution-statement/distribution-statement.component.html
+++ b/src/app/shared/distribution-statement/distribution-statement.component.html
@@ -43,7 +43,7 @@
   <div class="capital-stats">
     <div class="dist-card">
       <h4>Capital Value<sup>1</sup></h4>
-      <p>$ {{stats.totalCapitalInvestment | currencyFormat}}</p>
+      <p>{{stats.totalCapitalInvestment | currencyFormat}}</p>
     </div>
     <div class="dist-card">
       <h4>ROI<sup>2</sup></h4>
