added mission stmt to home + dist statement changes

--- a/src/app/admin/user-interests/user-interests.component.html
+++ b/src/app/admin/user-interests/user-interests.component.html
@@ -7,7 +7,7 @@
             <th>Phone No</th>
             <th>Remarks</th>
             <th>Req Submitted On</th>
-            <th>Action</th>
+            <th>Actions</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-userInterest let-editing="editing" let-ri="rowIndex">
