--- a/src/app/admin/user-transactions/user-transactions.component.html
+++ b/src/app/admin/user-transactions/user-transactions.component.html
@@ -96,7 +96,7 @@
           <th>Transaction Type</th>
           <th>Transaction Category</th>
           <th>Payment Mode</th>
-          <th>Action</th>
+          <th>Actions</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-transaction>
