--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -44,7 +44,7 @@
           <th>City</th>
           <th>Country</th>
           <th>Status</th>
-          <th>View</th>
+          <th>Actions</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-user>
