--- a/src/app/shared/distribution-statement/distribution-statement.component.html
+++ b/src/app/shared/distribution-statement/distribution-statement.component.html
@@ -23,8 +23,8 @@
 
   <div class="investment-summary">
     <div class="row">
-      <span>Initial Investment:</span>
-      <strong>{{stats.capitalInvestment | currencyFormat}}</strong>
+      <span>Total Investment:</span>
+      <strong>{{stats.totalCapitalInvestment | currencyFormat}}</strong>
     </div>
     <div class="row">
       <span>Dividends:</span>
