--- a/src/app/landing2/home2/home2.component.html
+++ b/src/app/landing2/home2/home2.component.html
@@ -9,7 +9,7 @@
             pAnimateOnScroll
             animateClass="animate__fadeInDown"
           >
-            <span class="hero-badge">Trusted by 10,000+ Investors</span>
+            <span class="hero-badge">Trusted by Many Investors</span>
           </div>
           <h1
             class="hero-title"
