--- a/src/app/admin/user-transactions/user-transactions.component.scss
+++ b/src/app/admin/user-transactions/user-transactions.component.scss
@@ -485,3 +485,13 @@
     background-color: #8dd0ff;
   }
 }
+
+.investment-amount {
+  color: green !important;
+}
+.dividend-amount {
+  color: red !important;
+}
+.fee-amount {
+  color: orange !important;
+}
